--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 This a super slim web interface to my Ruby Holidays gem (https://github.com/alexdunae/holidays).
+
+Check it out at http://empty-mist-5349.herokuapp.com 
+
+Can you make it prettier?  Fork and be my hero.
